p2-breathe: fixes for comment avatar spacing
git-svn-id: https://wpcom-themes.svn.automattic.com/p2-breathe@20832 d957f892-c61d-0410-b221-f235e6eecf30

--- a/css/src/ui/_comments.scss
+++ b/css/src/ui/_comments.scss
@@ -99,7 +99,8 @@
 
 	.avatar {
 		margin-right: 0;
-		margin-left: 0;
+		margin-left: 3px;
+		margin-top: 5px;
 	}
 
 	p {
@@ -382,4 +383,14 @@
 	}
 
 
+}
+
+article.tag-p2-xpost{
+	.comment{
+		.avatar{
+			margin-left: -10px;
+			margin-top: 0;
+
+		}
+	}
 }
